# modal_weather_layers_input

./: README.md  environment.yml  modal_ERA5_to_png_server.py
old/: old_cogeo_gfs.py
xarray_weather_server/: LICENSE  MANIFEST.in  README.md  dev_server.py  environment.yml  pyproject.toml  requirements.txt  setup.py  test_forecast.py
xarray_weather_server/examples/: basic_usage.py
xarray_weather_server/scripts/: build.sh  install.sh
xarray_weather_server/tests/: __init__.py  test_api.py  test_utils.py
xarray_weather_server/xarray_weather_server/: __init__.py  cli.py  data_fetcher.py  server.py  utils.py
xarray_weather_server/xarray_weather_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
